[package]
name = "bc"
version = "0.1.0"
authors = ["Peace <peace@scry.info>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "wallets",
    "device_app_lib",
    "util/substratetx",
    "murmel",
    "bitcoin",
    "wallets_cdl",
    #"wallets_macro",
    "wallets_types",
    #"mav",
    "chain/eth",
    "chain/eee",
    "chain/btc"
]

[dependencies.bitcoin]
version = "0.21"
features = ["serde"]

[patch.crates-io]
bitcoin = { path = "bitcoin" }

