[package]
name = "bc"
version = "0.1.0"
authors = ["Peace <peace@scry.info>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "wallets",
    "murmel",
    "chain/btc/bitcoin",
    "chain/eth",
    "chain/eee",
    "chain/eee/frame-metadata",
    "chain/btc",
    "wallets_cdl",
    "wallets_types",
    "wallets_macro"
]

[dependencies.bitcoin]
version = "0.21"
features = ["serde"]

[patch.crates-io]
bitcoin = { path = "chain/btc/bitcoin" }
frame-metadata = { path = "chain/eee/frame-metadata" }
hammersbald = {path = "chain/btc/hammersbald"}