[package]
name = "bc-service"
version = "0.1.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 ="0.6.2"
substrate-bip39 ="0.3.0"
schnorrkel="0.1.1"
rand = "0.7.0"
log = "0.4.8"
tiny-keccak = "1.5.0"
hex="0.3.2"
#rusqlite = "0.19.0"
sqlite="0.25.0"
#serde_rusqlite="0.20.0"
serde_derive = "1.0.98"
serde="1.0"


scrypt = { version = "0.2", default-features = true }
serde_json="1.0.40"
scry-crypto = {version = "0.1.0",path="../bc-util/crypto"}
scry-fs-util = {version = "0.1.0",path="../bc-util/fs"}

# 这里编译存在版本问题，当前使用的master能够正常编译通过
[dependencies.substrate-primitives]
#git = 'https://github.com/paritytech/substrate.git'
git = 'https://github.com/jeremymj/substrate'
package = 'substrate-primitives'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'
