[package]
name = "device_app_lib"
version = "0.1.0"
authors = ["Peace <peace@scry.info>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"
name="wallet"
#crate-type = ["staticlib"]
crate-type = ["cdylib"]
#crate-type = ["dylib"]

[dependencies]
wallets={path="../wallets"}
log = "0.4.8"
[target.'cfg(target_os="android")'.dependencies]
jni = "0.13"
#jni = { version = "0.13", default-features = false }
[build-dependencies]
vcpkg = "*"
