[package]
name = "mav"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
tiny-keccak = "1.5.0"
hex = "0.3.2"
sqlite = "0.25.0"
serde_derive = "1.0.90"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0"