[package]
name = "mav"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
log = "0.4.11"
uuid = "0.8.1"
strum = "0.20.0"
strum_macros = "0.20.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = "0.2"
rbatis-core = { version = "1.8.65", features = ["async-io-sqlite"] }
rbatis = { version = "1.8.65", features = ["async-io-sqlite"] }
rbatis-macro-driver = { version = "1.8.65"}

async-trait = "0.1.31"

wallets_macro = { path = "../wallets_macro", features = ["db_meta",] }

[dev-dependencies]
once_cell = "1.5.2"
futures = "0.3.8"
