[package]
name = "wallet"
version = "0.1.0"
authors = ["Peace <peace@scry.info>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.9", default-features = false }

