[package]
name = "wallet"
version = "0.1.0"
authors = ["Peace <peace@scry.info>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"
#crate-type = ["staticlib"]
crate-type = ["cdylib"]
#crate-type = ["dylib"]

[dependencies]
bc-service={path="../bc-service"}

[target.'cfg(target_os="android")'.dependencies]
#jni = { version = "0.13", default-features = false }
jni = "0.13"

