[package]
name = "wallets"
version = "0.1.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.8"
tiny-keccak = "1.5.0"
hex = "0.3.2"
serde_derive = "1.0.98"
serde = "1.0"
serde_json = "1.0"
failure = "0.1.3"
ethereum-types = "0.8.0"
semver = "0.11.0"
once_cell = "1.5.2"
parking_lot = "0.11.1"

uuid = { version = "0.7", features = ["serde", "v4"] }
secp256k1 = { version = "0.15", features = ["recovery"] }
codec = { package = "parity-scale-codec", version = "1.2.0" }
rlp = "0.4"
rbatis = { version = "1.8.52", features = ["async-io-sqlite"] }
async-std = { version = "1.7" }

ethtx = { path = "../util/ethtx" }
substratetx = { path = "../util/substratetx" }
wallets_types = { path = "../wallets_types" }
mav = { path = "../mav" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.9.0"
