[package]
name = "wallets"
version = "2.3.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.11"
tiny-keccak = "1.5.0"
hex = "0.3.2"
serde_derive = "1.0.98"
serde = "1.0"
serde_json = "1.0"
failure = "0.1.3"
strum = "0.20.0"
ethereum-types = "0.8.0"
semver = "0.11.0"
once_cell = "1.5.2"
parking_lot = "0.11.1"
bitcoin-wallet = "1.1.0"
bitcoin = { version = "0.21.0", features = ["serde"] }

uuid = { version = "0.7", features = ["serde", "v4"] }
secp256k1 = { version = "0.15", features = ["recovery"] }
codec = { package = "parity-scale-codec", version = "1.2.0" }
rlp = "0.4"
rbatis = { version = "1.8.75", features = ["async-io-sqlite"] }
futures = "0.3.8"
#async-std = "1.8.0"
async-trait = "0.1.31"

eth = { path = "../chain/eth" }
eee = { path = "../chain/eee" }
btc = { path = "../chain/btc" }
murmel = { path = "../chain/btc/murmel"}
scry-crypto = { path = "../util/crypto" }

wallets_types = { path = "../wallets_types" }
mav = { path = "../mav" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.9.2"

[dependencies.build_const]
optional = false
version = "0.2.1"

[build-dependencies.build_const]
optional = false
version = "0.2.1"