[package]
name = "wallets_cdl"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.80"
log = "0.4.11"
async-std = "1.8.0"

wallets = { version = "0.1.0", path = "../wallets" }
wallets_types = { path = "../wallets_types" }
wallets_macro = { path = "../wallets_macro" }
mav = { path = "../mav" }

[dev-dependencies]
pkg-config = "0.3.19"
mav = { path = "../mav" }
rbatis = { version = "1.8.52", features = ["async-io-sqlite"] }
#[workspace]