[package]
name = "wallets_cdl"
version = "2.3.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.80"
log = "0.4.11"
futures = "0.3.8"

wallets = { version = "0.1.0", path = "../wallets" }
wallets_types = { path = "../wallets_types" }
wallets_macro = { path = "../wallets_macro" }
mav = { path = "../mav" }

[dev-dependencies]
async-std = "1.8.0"
futures = "0.3.8"
tokio = { version = "0.3.6", features = ["rt"] }
smol = "1.2.5"
futures-lite = "1.11.3"

pkg-config = "0.3.19"
mav = { path = "../mav" }
rbatis = { version = "1.8.58", features = ["async-io-sqlite"] }
scry-crypto = { version = "0.1.0", path = "../util/crypto" }
jsonrpc-core="17.0.0"
jsonrpc-derive="17.0.0"
serde_json = "1.0"
serde_derive = "1.0.98"
serde = { version = "1.0.120", features = ["derive"] }
#

[dependencies.build_const]
optional = false
version = "0.2.1"

[build-dependencies.build_const]
optional = false
version = "0.2.1"

#[workspace]
