[package]
name = "wallets_cdl"
version = "2.3.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.80"
log = "0.4.11"
futures = "0.3.8"

wallets = { version = "2.3.0", path = "../wallets" }
wallets_types = { path = "../wallets_types" }
#wallets_macro = { path = "../wallets_macro",features = ["print_macro"] }
wallets_macro = { path = "../wallets_macro" }
mav = { path = "../mav" }

[dev-dependencies]
async-std = "1.8.0"
#futures = "0.3.8"
#tokio = { version = "0.3.6", features = ["rt"] }
smol = "1.2.5"
futures-lite = "1.11.3"

pkg-config = "0.3.19"
mav = { path = "../mav" }
rbatis = { version = "4.3.10"}
scry-crypto = { version = "0.1.0", path = "../util/crypto" }
serde_json = "1.0"
serde_derive = "1.0.98"
serde = { version = "1.0.120", features = ["derive"] }
jsonrpc_client = { version = "0.7.1", features = ["macros", "reqwest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.0"
reqwest = "0.11.0"
anyhow = "1"

#[workspace]
