[package]
name = "wallets_macro"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.50"
quote = "1.0.7"
proc-macro2 = "1.0.24"
proc_macro_roids = "0.7.0"

once_cell = "1.5.2"
serde = { version = "1", features = ["derive"] }

bigdecimal = { version = "0.2.0", package = "bigdecimal", features = ["serde"] }

[dev-dependencies]
rbatis-core = { version = "1.8.58", features = ["async-io-sqlite"] }
rbatis = { version = "1.8.58", features = ["async-io-sqlite"] }
rbatis-macro-driver = { version = "1.8.58", features = ["no_print"] }
serde = { version = "1", features = ["derive"] }

[features]
db_meta = []
print_macro = []