[package]
name = "wallets_macro"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.22"
quote = "1.0.29"
proc-macro2 = "1.0.64"
proc_macro_roids = "0.8.0"

once_cell = "1.5.2"
serde = { version = "1", features = ["derive"] }
rustfmt = "0.10.0"

bigdecimal = { version = "0.3.1", package = "bigdecimal", features = ["serde"] }

[dev-dependencies]
#, features = ["async-io-sqlite"]
rbatis = { version = "4.3"}
#rbatis-macro-driver = { version = "4.3.3" }
serde = { version = "1", features = ["derive"] }

[features]
default = ["print_macro"]
db_meta = []
print_macro = []
