[package]
name = "wallets_types"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

[lib]


[dependencies]
log = "0.4.11"
uuid = { version = "0.7", features = ["serde", "v4"] }

hex = "0.4.2"
parking_lot = "0.11.1"
serde_json = "1.0"
failure = "0.1.3"
semver = "0.11.0"
codec = { package = "parity-scale-codec", version = "1.2.0" }
rlp = "0.4"
secp256k1 = { version = "0.15", features = ["recovery"] }
rbatis = { version = "1.8.52", features = ["async-io-sqlite"] }
rbatis-core = { version = "1.8.52", features = ["async-io-sqlite"] }

async-trait = "0.1.31"
async-std = "1.8.0"

ethtx = { path = "../util/ethtx" }
eee = { path = "../chain/eee" }
mav = { path = "../mav" }


