[package]
name = "wallets_types"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

[lib]


[dependencies]
log = "0.4.11"
uuid = { version = "0.7", features = ["serde", "v4"] }

hex = "0.4.2"
parking_lot = "0.11.1"
serde_json = "1.0"
failure = "0.1.3"
semver = "0.11.0"
codec = { package = "parity-scale-codec", version = "1.2.0" }
rlp = "0.5.0"
secp256k1 = { version = "0.15", features = ["recovery"] }

rbatis = { version = "1.8.75", features = ["async-io-sqlite"] }
rbatis-core = { version = "1.8.70", features = ["async-io-sqlite"] }
scry-crypto = { path = "../util/crypto" }
#ethereum-types = "0.12.0"
primitive-types="0.9.1"
async-trait = "0.1.31"

eth = { path = "../chain/eth" }
eee = { path = "../chain/eee" }
btc = { path = "../chain/btc" }
mav = { path = "../mav" }

[dev-dependencies]
futures = "0.3.8"
