[package]
name = "wallets_types"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

[lib]


[dependencies]
log = "0.4.11"
uuid = { version = "1.4.0", features = ["serde", "v4"] }

hex = "0.4.2"
parking_lot = "0.12.1"
serde_json = "1.0"
failure = "0.1.3"
semver = "1.0.17"
codec = { package = "parity-scale-codec", version = "3.6.3" }
rlp = "0.5.0"
secp256k1 = { version = "0.27.0", features = ["recovery"] }
rbatis = { version = "4.3.10"}
rbs = { version = "4.3" }
scry-crypto = { path = "../util/crypto" }
#ethereum-types = "0.12.0"
primitive-types = "0.12.1"
async-trait = "0.1.31"

eth = { path = "../chain/eth" }
eee = { path = "../chain/eee" }
btc = { path = "../chain/btc" }
mav = { path = "../mav" }

[dev-dependencies]
futures = "0.3.8"
