[package]
name = "btcwallet"
version = "0.1.0"
authors = ["TigerInYourDreams <zyzzz0928@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
log = "0.4"
simple_logger = "1.3.0"
# https://github.com/rust-bitcoin/rust-bitcoin/
bitcoin = { version= "0.21", features=["serde"]}
failure = "0.1.6"
bitcoin_hashes = "0.7.1"
byteorder = "1.3.2"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]

