[package]
name = "btcwallet"
version = "0.1.0"
authors = ["TigerInYourDreams <zyzzz0928@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.3.0"
# https://github.com/rust-bitcoin/rust-bitcoin/
bitcoin = { version= "0.21", features=["serde"]}
failure = "0.1.6"
bitcoin_hashes = "0.7.1"
byteorder = "1.3.2"
rand = "0.7.2"
mio = "0.6"
futures-preview = "=0.3.0-alpha.19"
futures-timer = "0.3"
rustorm = "0.15.2"
