[package]
name = "wallet-test"
version = "0.1.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"
name="wallet"
crate-type = ["cdylib"]

[dependencies]
wallets={path="../../bc/wallets"}
log = "0.4.8"
ethereum-types = "0.8.0"
jni = "0.13"
serde_derive = "1.0.98"
serde="1.0"
serde_json = "1.0"
hex="0.4.2"

#[target.'cfg(target_os="android")'.dependencies]

#jni = { version = "0.13", default-features = false }
[build-dependencies]
vcpkg = "*"

[patch.crates-io]
frame-metadata = { path = "../../bc/frame-metadata-12.0.0" }

