[package]
name = "btc"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.1"
tiny-bip39="0.7.0"
tiny-hderive="0.2.1"
secp256k1 = {version = "0.15", features = ["recovery"] }
tiny-keccak = "1.5.0"
hex="0.4.0"
failure="0.1.8"
