[package]
name = "btc"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.1"
bitcoin-wallet = "1.1.0"
hex="0.4.0"
failure="0.1.8"
bitcoin = { version = "0.21.0", features = ["serde"] }