[package]
name = "eee"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path= "src/lib.rs"

[dependencies]
serde_derive = "1.0.98"
serde_json = "1.0"
serde = {version = "1.0", optional = true, features = ["derive"]}
tiny-keccak = "1.5.0"
substrate-bip39 ="0.4.2"
rand = "0.7.0"
rand_core = "0.5.0"
tiny-bip39 ="0.7.0"
log = "0.4.8"
derive_more = "0.99.1"
scrypt = { version = "0.2", default-features = true }
codec = { package = "parity-scale-codec",version = "1.3.1", features = ["derive"], default-features = false}
primitive-types = { version = "0.7.2", default-features = false, features = ["codec"] }

hex = {version = "0.4", default-features = false}
scry-crypto = {version = "0.1.0",path="../../util/crypto"}
frame-metadata = { version = '12.0.1', default-features = false}
thiserror = "1.0"
failure="0.1.3"
sp-std = {version = '2.0.1', default-features = false}
sp-runtime = {version = '2.0.1', default-features = false}
sp-io = {version = '2.0.1',default-features = false}

support = {version = '2.0.1', package = "frame-support", default-features = false}
sp-core = {version = '2.0.1', default-features = false,features = ["full_crypto"]}
system = {version = '2.0.1', package = "frame-system",default-features = false}
balances = {version = '2.0.1', package = "pallet-balances",default-features = false}

[dev-dependencies]
ws = {version = "0.9.1", features = ["ssl"]}
env_logger="0.8.2"

[features]
default = ['std']
std = [
    "support/std",
    "serde/std",
    "codec/std",
]
