[package]
name = "eee"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
serde_derive = "1.0.98"
serde_json = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
anyhow = "*"
tiny-keccak = "2.0"
substrate-bip39 = "0.4.4"
rand = "0.8.5"
rand_core = "0.6.4"
tiny-bip39 = "1.0.0"
log = "0.4.17"
derive_more = "0.99.1"
scrypt = { version = "0.10.0", default-features = true }
codec = { package = "parity-scale-codec", version = "3.4.0", features = ["derive"], default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["codec"] }

hex = { version = "0.4", default-features = false }
scry-crypto = { version = "0.1.0", path = "../../util/crypto" }
frame-metadata = { version = '15.0.0', default-features = false }
thiserror = "1.0"
failure = "0.1.3"
sp-std = { version = '6.0.0', default-features = false }
sp-runtime = { version = '19.0.0', default-features = false }
sp-io = { version = '18.0.0', default-features = false }

support = { version = '17.0.0', package = "frame-support", default-features = false }
sp-core = { version = '17.0.0', default-features = false, features = ["full_crypto"] }
system = { version = '17.0.0', package = "frame-system", default-features = false }
balances = { version = '17.0.0', package = "pallet-balances", default-features = false }


#sp-externalities="0.18.0"
[dev-dependencies]
ws = { version = "0.9.1", features = ["ssl"] }
env_logger = "0.10.0"

[features]
default = ['std']
std = [
    "support/std",
    "serde/std",
    "codec/std",
    "sp-core/std",
    "frame-metadata/std"
]
