[package]
name = "eth"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "14.1.0"
derive_more = "0.99.1"
hex="0.4.0"
ethereum-types = "0.11.0"
tiny-keccak = "1.5.0"
tiny-bip39="0.7.0"
tiny-hderive = "0.3.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.90"
failure="0.1.8"
rustc-hex = "2.0.1"
arrayvec = "0.5.0"
rlp = "0.5.0"
log = "0.4.8"
serde_repr = "0.1"
parity-crypto = {version = "0.9.0",features=["publickey"]}
parity-util-mem = "0.7"
secp256k1 = {version = "0.20.3", features = ["recovery"] }

