[package]
name = "substratetx"
version = "0.1.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = "1.5.0"
substrate-bip39 ="0.3.0"
schnorrkel="0.8.5"
rand = "0.7.0"
rand_core = "0.5.0"
tiny-bip39 ="0.7.0"
log = "0.4.8"
hex="0.3.2"
failure="0.1.3"
serde_derive = "1.0.98"
serde="1.0"
serde_json = "1.0"
derive_more = "0.99.1"
blake2-rfc="0.2.18"
scrypt = { version = "0.2", default-features = true }
codec = { package = "parity-scale-codec", version = "1.2.0" }

primitive-types = { version = "0.7.2", default-features = false, features = ["codec"] }

scry-crypto = {version = "0.1.0",path="../crypto"}

[dependencies.sp-core]
path = "../../../../eee/demo/substrate/primitives/core/"

[dependencies.node-runtime]
package = "node-template-runtime"
path="../../../../eee/demo/substrate/bin/node-template/runtime/"

[dependencies.sp-runtime]
path = "../../../../eee/demo/substrate/primitives/runtime/"

[dependencies.system]
package = "frame-system"
path = "../../../../eee/demo/substrate/frame/system/"

[dependencies.balances]
package = "pallet-balances"
path = "../../../../eee/demo/substrate/frame/balances/"


[dependencies.pallet-contracts]
package = "pallet-contracts"
path = "../../../../eee/demo/substrate/frame/contracts/"

[dependencies.transaction-payment]
package = "pallet-transaction-payment"
path = "../../../../eee/demo/substrate/frame/transaction-payment/"

[dependencies.frame-support]
path = "../../../../eee/demo/substrate/frame/support/"
