[package]
name = "substratetx"
version = "0.1.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = "1.5.0"
substrate-bip39 ="0.3.0"
schnorrkel="0.8.5"
rand = "0.7.0"
rand_core = "0.5.0"
tiny-bip39 ="0.7.0"
log = "0.4.8"
hex="0.3.2"
failure="0.1.3"
serde_derive = "1.0.98"
serde="1.0"
serde_json = "1.0"
derive_more = "0.99.1"
byteorder = { version = "1.3.2", default-features = false }
blake2-rfc="0.2.18"
twox-hash = { version = "1.5.0", default-features = false, optional = true }
scrypt = { version = "0.2", default-features = true }
codec = { package = "parity-scale-codec", version = "1.2.0" }

primitive-types = { version = "0.7.2", default-features = false, features = ["codec"] }

scry-crypto = {version = "0.1.0",path="../crypto"}

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[dependencies.node-runtime]
default-features = false
package = "scry-chain-runtime"
path="../../../../eee/runtime/"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[dependencies.system]
default-features = false
package = "frame-system"
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[dependencies.balances]
default-features = false
package = "pallet-balances"
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

#[dependencies.pallet-contracts]
#default-features = false
#package = "pallet-contracts"
#git = 'https://github.com/paritytech/substrate.git'
#tag = 'v2.0.0-rc6'

[dependencies.transaction-payment]
default-features = false
package = "pallet-transaction-payment"
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[features]
default = ['std']
std = [
#    'pallet-contracts/std',
    'sp-io/std',
    'node-runtime/std',
    "twox-hash/std",
]
