[package]
name = "cdl"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","lib"]
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"

[[test]]
name = "units"
path = "src/lib.rs"

[dependencies]
libc = "0.2.80"