[package]
name = "orm_diesel"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]
path = "lib.rs"

[dependencies]
libc = "0.2.80"
shared = { path = "../shared" }
log = "0.4"
#diesel
diesel = { version = "1.4.5", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[workspace]
