[package]
name = "orm_rbatis"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
shared = { path = "../shared" }

# rbatis
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
bigdecimal = "0.2"
rbatis-core = { version = "1.8.81", features = ["sqlite","async-io"] }
rbatis = { version = "1.8.81", features=["sqlite","async-io"] }
rbatis-macro-driver = { version = "^1.8.80" }
async-std = { version = "1.9" }
#sqlx-core = { features = ["runtime-async-std-rustls"] }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.9.0"

# rbatis end
[lib]
crate-type = ["cdylib", "lib"]
path = "lib.rs"

#[[test]]
#name = "units"
#path = "src/lib.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[workspace]