[package]
name = "shared"
version = "0.1.0"
authors = ["Peace <peacess@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
log = "0.4.0"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.1"

# rbatis end
[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
